Fixed spacing bug and no-user bug

--- a/src/pages/error/BadURL.module.scss
+++ b/src/pages/error/BadURL.module.scss
@@ -1,5 +1,1 @@
 @import 'theme/Theme';
-
-.locationWarning {
-    margin: 2;
-}
