--- a/src/pages/register/Register.module.scss
+++ b/src/pages/register/Register.module.scss
@@ -1,5 +1,1 @@
 @import 'theme/Theme';
-
-.formContainer {
-    margin-top: 3;
-}
