--- a/src/theme/Theme.scss
+++ b/src/theme/Theme.scss
@@ -1,15 +1,5 @@
 .container {
-    margin-top: 8;
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.submitButton {
-    margin-top: 3;
-    margin-bottom: 2;
-}
-
-.googleSubmitButton {
-    margin-bottom: 2;
 }
